<resources>
    <string name="app_name">Poster</string>
    <string name="this_is_the_explanation_text_that_gives_more_details_about_the_title_you_can_add_more_content_here">
        This is the explanation text that gives more details about the title. You can add more content here.
    </string>
    <string name="your_title_here">Your Title Here</string>
    <string name="neon_howl">Neon Howl</string>
    <string name="in_the_heart_of_a_neon_lit_city">
        In a neon-lit city, chaos erupts when an ancient curse awakens the Night Howler. Led by Beef Wellington and Starla Moonshine, a team of heroes must uncover the truth before the creature plunges the world into eternal darkness.
    </string>
    <string name="purchase_tickets">Purchase Tickets</string>
    <string name="order_summary_confirm">Order Summary</string>
    <string name="cinema_none_confirm">Cinema: %s</string>
    <string name="screening_time_none_confirm">Screening Time: %s</string>
    <string name="number_of_tickets_0_confirm">Number Of Tickets: %d</string>
    <string name="total_cost_0_confirm">Total Cost: %d$</string>
    <string name="order_status_placed_confirm">Order Status: Placed</string>
    <string name="close_confirm">Close</string>
    <string name="cart_summary_purchase">Cart Summary</string>
    <string name="cinema_none_purchase">Cinema: %s</string>
    <string name="screening_time_none_purchase">Screening Time: %s</string>
    <string name="number_of_tickets_0_purchase">Number Of Tickets: %d</string>
    <string name="total_cost_0_purchase">Total cost: %d$</string>
    <string name="order_status_not_placed_purchase">Order Status: Not Placed</string>
    <string name="close_purchase">Close</string>
    <string name="cart_empty_message">Your cart is empty.</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_not_placed">Order Not Placed</string>
    <string name="purchase_confirmed">Purchase Confirmed!</string>
    <string name="order_status_main">Order Status</string>
    <string name="reset_main">Reset</string>
    <string name="confirm_purchase_main">Confirm Purchase</string>
    <string name="get_tickets_main">Get Tickets</string>
    <string name="child_10_main">Child: 10$</string>
    <string name="adult_20_main">Adult: 20$</string>
    <string name="number_of_tickets_0_main">Number of Tickets:0</string>
    <string name="select_number_of_tickets_main">Select Number of Tickets</string>
    <string name="number_of_tickets_format">Number of Tickets: %d</string>
    <string name="number_of_tickets_0_reset">Number of Tickets: 0</string>
    <string name="selections_reset_message">Selections have been reset.</string>
    <string name="tickets_added_message">Added %1$d %2$s tickets. Total: $%3$d</string>
    <string name="child">Child</string>
    <string name="adult">Adult</string>
    <string name="select_ticket_type_message">Please select Adult or Child ticket</string>
    <string name="select_at_least_one_ticket_message">Please select at least one ticket</string>
    <string name="select_cinema">Select Cinema</string>
    <string name="select_time">Select Time</string>


    <string-array name="cinemas_array">
        <item>Yes Planet</item>
        <item>Lev Cinema</item>
        <item>Rav Chen</item>
        <item>Cinema City</item>
        <item>Hot Cinema</item>
    </string-array>

    <string-array name="screening_times_array">
        <item>10:30 AM</item>
        <item>12:45 PM</item>
        <item>3:00 PM</item>
        <item>5:15 PM</item>
        <item>7:30 PM</item>
        <item>9:45 PM</item>
        <item>11:00 PM</item>
    </string-array>
</resources>


