<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- כותרת הדיאלוג -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary_confirm"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingBottom="10dp" />

    <!-- שם הקולנוע -->
    <TextView
        android:id="@+id/cinema_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cinema_none_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- זמן ההקרנה -->
    <TextView
        android:id="@+id/Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screening_time_none_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- מספר הכרטיסים -->
    <TextView
        android:id="@+id/Number_Of_Tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_tickets_0_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- סיכום כולל -->
    <TextView
        android:id="@+id/Total_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_cost_0_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- סטטוס ההזמנה -->
    <TextView
        android:id="@+id/order_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_status_placed_confirm"
        android:textSize="16sp"
        android:textColor="#4CAF50" />

    <!-- כפתור סגירה -->
    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_confirm"
        android:textStyle="bold" />
</LinearLayout>
